--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,33 @@
 }
 
 body {
+  background-color: #f3f4f6;
   height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-
 .weatherBox {
-  background-color: aquamarine;
-  width: 75vw;
-  height: 70vh;
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.2) !important;
+  border-radius: 1rem !important;
+  max-width:70vw;
 }
+.weather-icon {
+  width: 3.5rem;
+  object-position: center;
+}
+.weatherDetails {
+  display: grid !important;
+  grid-template-columns: repeat(3, 1fr) !important;
+}
+
+
 @media screen and (max-width: 400px) {
   .weatherBox {
-    width: 95vw;
+    max-width: 100vw !important;
+  }
+  .weatherDetails {
+    grid-template-columns: repeat(2, 1fr) !important;
   }
 }
